; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32/extr_reset_reason.c_esp_reset_reason_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32/extr_reset_reason.c_esp_reset_reason_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PRO_CPU_NUM = common dso_local global i32 0, align 4
@s_reset_reason = common dso_local global i32 0, align 4
@ESP_RST_UNKNOWN = common dso_local global i64 0, align 8
@llvm.global_ctors = appending global [1 x { i32, void ()*, i8* }] [{ i32, void ()*, i8* } { i32 65535, void ()* @esp_reset_reason_init, i8* null }]
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @esp_reset_reason_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @esp_reset_reason_init() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @esp_reset_reason_get_hint()
  store i64 %2, i64* %1, align 8
  %3 = load i32, i32* @PRO_CPU_NUM, align 4
  %4 = call i32 @rtc_get_reset_reason(i32 %3)
  %5 = load i64, i64* %1, align 8
  %6 = call i32 @get_reset_reason(i32 %4, i64 %5)
  store i32 %6, i32* @s_reset_reason, align 4
  %7 = load i64, i64* %1, align 8
  %8 = load i64, i64* @ESP_RST_UNKNOWN, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = call i32 (...) @esp_reset_reason_clear_hint()
  br label %12

12:                                               ; preds = %10, %0
  ret void
}

declare dso_local i64 @esp_reset_reason_get_hint(...) #1

declare dso_local i32 @get_reset_reason(i32, i64) #1

declare dso_local i32 @rtc_get_reset_reason(i32) #1

declare dso_local i32 @esp_reset_reason_clear_hint(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
